--- a/RollingClockWithWifiManager/platformio.ini
+++ b/RollingClockWithWifiManager/platformio.ini
@@ -23,9 +23,7 @@ lib_deps =
 	ropg/ezTime@^0.8.3
 monitor_speed = 115200
 monitor_filters = esp32_exception_decoder
-;Replace with 115200 if upload fails
 upload_speed = 921600
-;lib_ldf_mode = deep+
 
 [common_cyd]
 lib_deps = 
@@ -57,13 +55,13 @@ build_flags =
 	-DLOAD_FONT8
 	-DLOAD_GFXFF
 	-DUSE_HSPI_PORT
-
-	;Specific to this project
-	-D SMOOTH_FONT	; #define SMOOTH_FONT
+	
+	-D SMOOTH_FONT
 
 [env:cyd]
 lib_deps = 
 	${common_cyd.lib_deps}
+	bblanchon/ArduinoJson@^7.0.4
 build_flags = 
 	${common_cyd.build_flags}
 	-DTFT_INVERSION_OFF
@@ -71,6 +69,7 @@ build_flags =
 [env:cyd2usb]
 lib_deps = 
 	${common_cyd.lib_deps}
+	bblanchon/ArduinoJson@^7.0.4
 build_flags = 
 	${common_cyd.build_flags}
 	-DTFT_INVERSION_ON
